# c-dspeq

./: CMakeLists.txt  filtercalc.py  main.c
cmake/: FindPortAudio.cmake
